--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%;">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-	<title>Untitled</title>
+	<title>Vipulism</title>
 <!--Adobe Edge Runtime-->
     <script type="text/javascript" charset="utf-8" src="index_edgePreload.js"></script>
     <style>
@@ -12,7 +12,7 @@
 <!--Adobe Edge Runtime End-->
 
 </head>
-<body style="margin:0;padding:0;">
+<body style="margin:0;padding:0;height:100%;">
 	<div id="Stage" class="EDGE-602450017">
 	</div>
 </body>
