--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
-<html style="height:100%;">
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-	<title>Vipulism</title>
-<!--Adobe Edge Runtime-->
-    <script type="text/javascript" charset="utf-8" src="index_edgePreload.js"></script>
-    <style>
-        .edgeLoad-EDGE-602450017 { visibility:hidden; }
-    </style>
-<!--Adobe Edge Runtime End-->
-
+	<meta charset="UTF-8">
+	<title>Faltu Apps</title>
+	<link rel="stylesheet" href="css/style.css">
+	<script src="js/jquery.min.js"></script>
 </head>
-<body style="margin:0;padding:0;height:100%;">
-	<div id="Stage" class="EDGE-602450017">
+<body>
+<div class="wrap">
+<ul class="gameCenter">
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+</ul>
+
+	<div class="logo">Vipulism  </div>
 	</div>
+	<script>
+
+	(function  () {
+		
+$('.wrap').fadeIn(3000);
+
+
+
+	})();
+	</script>
 </body>
 </html>
