--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Faltu Apps</title>
 	<link rel="stylesheet" href="css/style.css">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="js/jquery.min.js"></script>
 </head>
 <body>
