--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="cordova.js"></script>
-
+<script type="text/javascript" src="js/SocialSharing.js"></script>
 </head>
 <body>
 <div class="wrap">
